--- a/xml_nfe_to_sql/pyproject.toml
+++ b/xml_nfe_to_sql/pyproject.toml
@@ -6,8 +6,10 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-requests = "^2.24.0"
 lxml = "^4.5.2"
+pandas = "^1.0.5"
+sqlalchemy = "^1.3.18"
+pyodbc = "^4.0.30"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
