--- a/xml_nfe_to_sql/pyproject.toml
+++ b/xml_nfe_to_sql/pyproject.toml
@@ -10,9 +10,11 @@ lxml = "^4.5.2"
 pandas = "^1.0.5"
 sqlalchemy = "^1.3.18"
 pyodbc = "^4.0.30"
+xmlschema = "^1.2.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+xmlschema = "^1.2.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
